Update README.md
Updated with the latest version of Eclipse to use to build/develop Ptidej.
Updated and explained better the command-line arguments.
Updated the to-do list.